第一次作业修改

--- a/01-html.html
+++ b/01-html.html
@@ -11,7 +11,7 @@
         <a href="https://www.xbmu.edu.cn/">西北民族大学</a>位于甘肃省兰州市，简称“西北民大”，是直属中华人民共和国国家民族事务委员会的全日制普通高等本科院校，由国家民族事务委员会、教育部、中国科学院、甘肃省人民政府共建，是中华人民共和国成立后创建的第一所民族高等院校
     </p>
     <p>
-       <img src="https://cn.bing.com/images/search?view=detailV2&ccid=TTU4K2CC&id=3590EFEF669EB79B5FF79C86ECF51589C4E2C5CB&thid=OIP.TTU4K2CC1NmHo47mIo4ssAHaF2&mediaurl=https%3a%2f%2fts1.cn.mm.bing.net%2fth%2fid%2fR-C.4d35382b6082d4d987a38ee6228e2cb0%3frik%3dy8XixIkV9eyGnA%26riu%3dhttp%253a%252f%252fpic.baike.soso.com%252fp%252f20130706%252f20130706153019-727373252.jpg%26ehk%3dJsdO9J3toWUe4TWRkeCB%252fne0%252fR94OBdHVjs1zi7%252bUEU%253d%26risl%3d%26pid%3dImgRaw%26r%3d0%26sres%3d1%26sresct%3d1%26srh%3d799%26srw%3d1012&exph=395&expw=500&q=%e8%a5%bf%e5%8c%97%e6%b0%91%e6%97%8f%e5%a4%a7%e5%ad%a6&simid=608018931451035791&FORM=IRPRST&ck=F9DF35A8B9E8643F9D1C36EDE410CC67&selectedIndex=10&itb=0&ajaxhist=0&ajaxserp=0" alt="" srcset="">
+       <img src="https://tse3-mm.cn.bing.net/th/id/OIP-C.vJ-bISXt_DH76VQTWccyNAHaC2?rs=1&pid=ImgDetMain" alt="西北民族大学" >
     </p>
     <ol>
         <li>大一</li>
