--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li><a href="01-html.html">作业1：HTML常用元素练习</a></li>
         <li><a href="02-css.html">作业2：CSS基础知识练习</a></li>
         <li><a href="03-css.html">作业3：html常用元素练习3</a></li>
+        <li><a href="04-css.html">作业4：css选择符练习</a></li>
     </ul>
 </body>
 </html>
