--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="02-css.html">作业2：CSS基础知识练习</a></li>
         <li><a href="03-css.html">作业3：html常用元素练习3</a></li>
         <li><a href="04-css.html">作业4：css选择符练习</a></li>
+        <li><a href="05-html.html">作业5：盒模型 、背景、文字排版练习</a></li>
     </ul>
 </body>
 </html>
