作业6：立方体动画

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <li><a href="03-css.html">作业3：html常用元素练习3</a></li>
         <li><a href="04-css.html">作业4：css选择符练习</a></li>
         <li><a href="05-html.html">作业5：盒模型 、背景、文字排版练习</a></li>
+        <li><a href="06-css.html">作业6：AI盒模型 </a></li>
+        <li><a href="06-css.html">作业7：武侠 </a></li>
     </ul>
 </body>
 </html>
