--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="05-html.html">作业5：盒模型 、背景、文字排版练习</a></li>
         <li><a href="06-css.html">作业6：AI盒模型 </a></li>
         <li><a href="07-js.function.html">作业7：武侠人物随机生成 </a></li>
+        <li><a href="09-js-class.html">作业9：小张小明 </a></li>
     </ul>
 </body>
 </html>
